1.41v

Features:
1. Site identifier in code generation it's use full filter for having different messages for different domains if they use different identifiers.
This way we can have different messages by different domains etc.

Enhancements:
1. Template cache by port.
https://github.com/remdex/livehelperchat/issues/66

2. Simpler permission access generation.
https://github.com/remdex/livehelperchat/issues/62

Bugfixes:
1. User who did not had permission to close chat was able to do that because of typo error. It's fixed now.

execute doc/update_db/update_28.sql

1.40.1v

Features:
1. Top menu remaked based on
1.1 https://github.com/raphaelsuzuki/lhc_web-defaulttheme2
1.2 https://github.com/remdex/livehelperchat/issues/36

1.40v

Features:
1. Operator to Operator chat
2. Sound on transfered chat

Bugfix:
1. Windows OS support

No database update needed this time :)

1.39.1v

Features:
1. French translation from icime.me
2. Italian translation from cliccaprezzi.it
3. Option to hide online users tab from operators.
Chat -> Allow user to view online visitors
4. Renamed "Online users" to "Online visitors"

Bugfix:
1. Removed not needed span element in online visitors section.

1.39v

Features:
1. Russian language by http://phone-home.ru
2. Polish language by http://poliman.pl
3. Footprint for user browsing
4. Google map user info with footprint
5. Reworked chat window with additional user info
5. Preview chat window listing update

execute doc/update_db/update_27.sql

1.38v

Features:
1. Pro active chat invitations https://github.com/remdex/livehelperchat/issues/49
2. Detect bots in online users to avoid them appear in online users list
3. Option to delete online user record from online users list.

Bug fixes:
1. If in FAQ widget answer is very big it hides under browser window. I have added rule for scrollbar if height is more than 200px.

execute doc/update_db/update_26.sql

1.37v

1. Online users google map https://github.com/remdex/livehelperchat/issues/45