@@ -202,7 +202,7 @@ class erLhcoreClassUser{
    function updateLastVisit()
    {
        $db = ezcDbInstance::get();
-       $db->query('UPDATE `lh_userdep SET` `last_activity` = '.time().' WHERE `user_id` = '.$this->userid);
+       $db->query('UPDATE `lh_userdep` SET `last_activity` = '.time().' WHERE `user_id` = '.$this->userid);
    }
 
    function getUserList()
